--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,14 +11,15 @@ body{
 
 
 h1{
-	font-family: "Georgia serif";
+	font-family: "M PLUS Rounded";
+	font-weight: bold;
 	text-align: center;
 	font-size: 175%;
 	margin-bottom: 2%;
 }
 .topic1,.topic2,.topic3{
 	font-size: 125%;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "M PLUS Rounded", cursive, sans-serif;
 	font-weight: bold;
 	float: right;
 	width: 150px;
