--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,6 +20,7 @@ h1{
 .topic1,.topic2,.topic3{
 	font-size: 125%;
 	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-weight: bold;
 	float: right;
 	width: 150px;
 	height: 40px;
