--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,7 +11,7 @@ body{
 
 
 h1{
-	font-family: "Georgia serif";
+	font-style: "Arial";
 	text-align: center;
 	font-size: 175%;
 	margin-bottom: 2%;
